# crosspoint-global-trading-platform

./: .gitignore  Dockerfile  Dockerfile.railway  README.md  RUNBOOK.md  docker-compose.yml  pyproject.toml  railway.toml  requirements-railway.txt  run_simple.py  web_dashboard.py
.github/workflows/: ci.yml
config/: compliance.example.env  production.example.env
docs/: ARCHITECTURE.md
examples/workflows/: agent-screening.json  backtest-pipeline.json  macro-agent-pipeline.json
scripts/: autopilot.ps1  dev.ps1  finish-setup.ps1  setup-paper.ps1  start-all.ps1  start-public.ps1  update-watchlist.ps1  verify-env.ps1  verify.ps1  verify.sh
src/fincept_terminal/: __init__.py  __main__.py  cli.py  main.py
src/fincept_terminal/agents/: __init__.py  base.py  liquidity_gate.py  macro_context.py
src/fincept_terminal/agents/macro_agents/: __init__.py  dalio.py
src/fincept_terminal/analytics/: __init__.py  dcf.py  portfolio.py  risk.py
src/fincept_terminal/connectors/: __init__.py  fred.py  kraken.py  polygon.py  yahoo_finance.py
src/fincept_terminal/dashboard/: __init__.py  phase2_state.py
src/fincept_terminal/quantlib/: __init__.py  pricing.py  risk.py
src/fincept_terminal/scheduler/: __init__.py  tasks.py
src/fincept_terminal/trading/: __init__.py  bridge.py  execution.py  websocket.py
src/fincept_terminal/ui/: __init__.py  chart_slideover.py  charts.py  dashboard.py  main_window.py  node_editor.py  phase2_dashboard.py  ticker_banner.py
src/fincept_terminal/workflows/: __init__.py  executor.py  schema.py
src/global_trading/: __init__.py  asyncio_compat.py  cli.py  executor.py  instruments.py  settings.py
src/global_trading/agents/: __init__.py  execution.py  market_data.py  portfolio.py  risk_agent.py  signal.py
src/global_trading/backtest/: __init__.py  data.py  engine.py
src/global_trading/connectors/: __init__.py  base.py  crypto_ccxt.py  fake.py  ibkr.py  reconcile.py
src/global_trading/core/: __init__.py  audit.py  domain.py  ledger.py  risk.py  serde.py
src/global_trading/execution/: __init__.py  algorithms.py  benchmark.py  latency.py  slippage.py  sor.py
src/global_trading/observability/: __init__.py  logging.py  metrics.py
src/global_trading/orchestrator/: __init__.py  workflow.py
tests/: test_backtest.py  test_consensus.py  test_dalio_agent.py  test_debate_bridge.py  test_execution.py  test_instruments.py  test_ipo_screener.py  test_macro_context.py  test_reconcile.py  test_risk.py  test_risk_drawdown.py  test_simons_agent.py  test_workflow.py  test_workflow_executor.py
(+16 files in other folders)
