[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "global-trading-platform"
version = "0.1.0"
description = "Multi-agent trading platform with pluggable broker and crypto connectors"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "structlog>=24.1",
]

[project.optional-dependencies]
ibkr = ["ib-insync>=0.9.86"]
crypto = ["ccxt>=4.2"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.3",
]

[project.scripts]
gtp = "global_trading.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
