[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fincept-terminal"
version = "4.0.2"
description = "Fincept Terminal: State-of-the-art financial intelligence platform with CFA-level analytics, AI automation, and unlimited data connectivity"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "structlog>=24.1",
  "rich>=13.7",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scipy>=1.10.0",
  "yfinance>=0.2.18",
  "requests>=2.31.0",
  "aiohttp>=3.8.0",
  "websockets>=11.0.0",
  "plotly>=5.15.0",
  "dash>=2.14.0",
  "PyQt6>=6.5.0",
  "quantlib>=1.32",
  "scikit-learn>=1.3.0",
  "tensorflow>=2.13.0",
  "torch>=2.0.0",
  "transformers>=4.30.0",
  "openai>=1.0.0",
  "anthropic>=0.7.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.11.0",
  "redis>=4.6.0",
  "celery>=5.3.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.22.0",
]

[project.optional-dependencies]
ibkr = ["ib-insync>=0.9.86"]
crypto = ["ccxt>=4.2"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1.0",
  "ruff>=0.3",
  "black>=23.7.0",
  "mypy>=1.5.0",
  "pre-commit>=3.3.0",
]
all = [
  "fincept-terminal[ibkr,crypto,dev]",
  "polygon-api-client>=1.0.0",
  "fredapi>=0.4.0",
  "dbnomics>=0.3.0",
  "akshare>=1.9.0",
  "beautifulsoup4>=4.12.0",
  "selenium>=4.10.0",
  "geopandas>=0.13.0",
  "shapely>=2.0.0",
  "rasterio>=1.3.0",
  "satellite-image-deep-learning>=0.1.0",
]

[project.scripts]
fincept = "fincept_terminal.main:main"
gtp = "fincept_terminal.cli:main"
crosspoint = "fincept_terminal.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
